updated home, about, and contact with changes from client

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="aboutPhilosophy.html">Our Philosophy</a>
+                                <li><a href="aboutPhilosophy.html">Farming Practices</a>
                                 </li>
-                                <li><a href="aboutStory.html">Our Team</a>
+                                <li><a href="aboutStory.html">About Us</a>
                                 </li>
                             </ul>
                         </li>
@@ -116,8 +116,9 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Nature's Finest: We Grow Exceptional Produce.</h1>
-                    <h3>Cras vitae urna nisi. Phasellus rutrum massa id ante vehicula malesuada. Sed lectus eros, luctus et rhoncus in, fermentum nec eros. Quisque tincidunt augue et cursus vulputate. Fusce sagittis mattis sem, a dignissim purus egestas eget. Phasellus vitae volutpat orci.</h3>
+                    <h3>Mount Hood forms the spectacular backdrop for our vegetable farm halfway up the Hood River Valley. One of the larger vegetable farms in the immediate area, our focus is on providing freshly picked produce throughout the growing season.</h3>
+                    <br>
+                    <h3>Our primary customers are local and regional restaurants and grocery stores, though you can meet us as we sell direct to the consumer at the Hood River Farmer’s Market and the Mercado del Valle in Odell.</h3>
                     
                 </div>
             </div>
