added responsive accordian

--- a/aboutPhilosophy.html
+++ b/aboutPhilosophy.html
@@ -81,13 +81,13 @@
         <!-- /.row -->
 
         <div class="row">
-             <div class="col-md-6 hidden-sm hidden-xs">
+             <div class="col-sm-6 hidden-xs">
 
                 <div class="fieldPic">
                     <img class="img-responsive" id="fieldPic" src="img/growth.jpg">
                 </div>
             </div>
-            <div class="col-md-6 hidden-sm hidden-xs">
+            <div class="col-sm-6 hidden-xs">
                 <div id="aboutHeader">
                     <h2>Our Farming Practices</h2>
                 </div>
@@ -155,16 +155,74 @@
 
             </div>
 
-            <div class="col-xs-12 hidden-lg hidden-md">
+            <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
                 <div id="aboutHeader">
                     <h2>Our Farming Practices</h2>
                 </div>
                 <div class="philosophy">
                     </p>Nature’s Finest is dedicated to growing premium vegetables for the local market area. We are mindful of what goes into the land and choose our farming practices accordingly. Our decades of experience in commercial agriculture enable us to meet the needs of our wholesale customers.</p> 
                 </div>
+                <div class="panel-group" id="accordion">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                          Locally Fresh
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse">
+                      <div class="panel-body">
+                        Our farm sits in the fertile Hood River Valley's 'sunbelt.' We target local and regional customers to ensure that our vegetables are fresh and delicious. Our produce is hand-picked, cleaned and packed, then delivered straight from our farm to the retailer or restaurant.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                          Reliable
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse">
+                      <div class="panel-body">
+                        To provide a full season of fresh produce to our buyers, we start our transplants in our own greenhouse, plant early crops under tunnels, and schedule multiple plantings during the season. Meticulous planning and strategic planting allows us to produce the quantities our customers require.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                          Competitive
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapse3" class="panel-collapse collapse">
+                      <div class="panel-body">
+                        We believe local produce should be accessible at a reasonable price in local markets, working within the constraints of commercial buyers. We consult closely with our customers to determine their needs throughout the season and price our produce competitively as compared to large wholesalers.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+                          Varied
+                        </a>
+                      </h4>
+                    </div>
+                    <div id="collapse4" class="panel-collapse collapse">
+                      <div class="panel-body">
+                        Nature’s Finest grows a wide range of items, supplementing standard crops such as lettuce, corn, broccoli, cucumbers, spinach and zucchini with specialty items like purple cauliflower, brussels sprouts on the stalk, and flower (kale) sprouts.  We encourage suggestions from our customers so we can better meet their needs.
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
             </div>
-                <div class="col-xs-12 hidden-lg hidden-md">
+                <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
                     <div class="fieldPic">
                         <img class="img-responsive" id="fieldPic" src="img/growth.jpg">
                     </div>
